# service-layer-query-generator

./: .gitignore  README.md  main.py  pyproject.toml
src/: odata_query_chroma.py  persentation.py  test_odata_servicelayer.py
src/modules/: chroma_retriever.py  data_extract.py  embedding_model.py  hybrid_retriever.py  langchain_data.py  llm_model.py  prompts.py  retriever.py
