[project]
name = "service-layer-query-generator"
version = "0.1.0"
description = "Service Layer Query Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "gradio>=6.2.0",
    "langchain>=0.1.20",
    "langchain-community==0.2.6",
    "huggingface-hub>=0.33.5",
    "faiss-cpu==1.8.0",
    "langchain-anthropic==0.1.20",
    "python-dotenv==1.0.0",
    "langchain-huggingface==0.0.3",
    "sentence-transformers>=2.7.0",
    "rank-bm25==0.2.2",
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0"
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"